add use site null checks for fields
Reviewed-by: liach, mcimadamore